--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.26.2",
+    "uuid": "^10.0.0",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
