--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,6 +24,7 @@
       "@constants/*": ["constants/*"],
       "@hooks/*": ["hooks/*"],
       "@interfaces/*": ["interfaces/*"],
+      "@mocks/*": ["mocks/*"],
       "@pages/*": ["pages/*"],
       "@routes/*": ["routes/*"],
       "@services/*": ["services/*"],
@@ -40,5 +41,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*", "src/interfaces/components.types.d.ts"]
+  "include": [
+    "src/**/*",
+    "src/interfaces/components.types.d.ts",
+    "src/interfaces/app.d.ts"
+  ]
 }
