--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,5 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*", "src/interfaces/components.types.d.ts"]
+  "include": [
+    "src/**/*",
+    "src/interfaces/components.types.d.ts",
+    "src/interfaces/app.d.ts"
+  ]
 }
