--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-redux": "^7.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "uuid": "^10.0.0",
     "vite-plugin-svgr": "^4.2.0"
