--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
