--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -25,7 +28,6 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
