--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
