--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,7 +33,7 @@
       "@utils/*": ["utils/*"]
     },
 
-    "typeRoots": ["./src/@types", "./src/interfaces"],
+    "typeRoots": ["src/@types", "src/interfaces"],
 
     /* Linting */
     "strict": true,
@@ -41,9 +41,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src/**/*",
-    "src/interfaces/components.types.d.ts",
-    "src/interfaces/app.d.ts"
-  ]
+  "include": ["src/**/*", "src/interfaces/**/*"]
 }
